--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body{
 }
 .line{
     display:grid;
-    grid-template-columns:  24% 24% 24% 24%;
+    grid-template-columns:  48% 48%;
     grid-gap: 1%;
     
 }
