--- a/src/Card.css
+++ b/src/Card.css
@@ -1,6 +1,6 @@
 .cards{
     position: relative;
-    margin: 1%;
+    margin: 10%;
     padding: 1%;
     background-image: linear-gradient(to bottom right,red,black);
     border-radius: 5px;
@@ -21,13 +21,20 @@
 }
 
 img{
+    width: 80%;
     height: 300px;
     border: solid white;
     border-radius: 10px;
     transition: 1s;
+    margin: 1%;
 }
 button{
     margin-bottom: 10px;
     margin-top: 10px;
     cursor: pointer;
+    color: white;
+    background-color: black;
+    width: 80%;
+    border-radius: 20px;
+    padding: 1%;
 }
