--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,15 @@
 body{
     
-    width: 96%;
+    width: 94%;
     border: solid red;
     text-align: center;
-    margin: 1%;
-    padding: 1%;
+    
+    padding: 2%;
     background-color: black;
 }
 .line{
     display:grid;
-    grid-template-columns:  24% 24% 24% 24%;
+    grid-template-columns:  50% 50%;
     grid-gap: 1%;
     
 }
